--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cafe",
   "version": "0.1.0",
   "private": true,
+  "homepage": "ISRCafe",
   "dependencies": {
     "prop-types": "^15.6.2",
     "rc-queue-anim": "^1.6.10",
